--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<h3>Siberian Tiger</h3>
 		<!-- your favorite animal's image goes here -->
 		<img src="images/siberian_tiger.jpg" alt="Siberian Tiger">
+		<!-- A-Z Animals: White Tiger (Nov 2008) Available at: <a href="https://a-z-animals.com/animals/siberian-tiger/">https://a-z-animals.com/animals/siberian-tiger/</a> [Accessed 23 May 2018] -->
 		<div class="info">
 			<!-- your favorite animal's interesting fact goes here -->
 			<p><em>Siberian tiger is the rarest species of tiger living in the wild</em> </p>
